Opravena funkce tlačítka

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Ahoj</h1>
     <p>Vítejte na mojí webovce 😊</p>
+    <script src="js/script.js"></script>
     <button class="my-button">Více</button>
 </body>
 </html>
